@@ -76,8 +76,8 @@ import de.fuberlin.wiwiss.ng4j.semwebclient.urisearch.URISearchTaskQueue;
  * @author Tobias Gauß (tobias.gauss@web.de)
  * @author Olaf Hartig (hartig@informatik.hu-berlin.de)
  */
-public class SemanticWebClient extends NamedGraphSetImpl {
-// public class SemanticWebClient extends de.fuberlin.wiwiss.ng4j.semwebclient.graph.SWClNamedGraphSetImpl {
+// public class SemanticWebClient extends NamedGraphSetImpl {
+public class SemanticWebClient extends de.fuberlin.wiwiss.ng4j.semwebclient.graph.SWClNamedGraphSetImpl {
 	public static final String CONFIG_MAXSTEPS = "maxsteps";
 	public static final String CONFIG_MAXTHREADS = "maxthreads";
 	public static final String CONFIG_TIMEOUT = "timeout";
